fixed requestsitem component's grid and added white space to the bottom

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -12,6 +12,11 @@ body {
   grid-template-columns: [page-s] 14rem [content-s] 1fr [content-e] 14rem [page-e];
 }
 
+.layout-space {
+  height: 25rem;
+  width: 100%;
+}
+
 .bar {
   height: 4rem;
   background-color: $color-gray-D8;
